syntax = "proto3";

package read;

service ReadService {
  rpc ReadResource (ReadRequest) returns (ReadResponse) {}
}

message ReadRequest {
  int32 id = 1;
}

message ReadResponse {
  string name = 2;
}